--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.login {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  width: 30%;
+  border-radius: 5px;
+}
+.login_item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.log_button {
+  width: 150px;
+  height: 28px;
+  border: 1px solid black;
+  border-radius: 3px;
+  background-color: transparent;
+  margin-bottom: 10px;
 }
